--- a/231479_231464.csproj
+++ b/231479_231464.csproj
@@ -100,6 +100,18 @@
   <ItemGroup>
     <Compile Include="banco.cs" />
     <Compile Include="consulta.cs" />
+    <Compile Include="Views\FrmCidades.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Views\FrmCidades.Designer.cs">
+      <DependentUpon>FrmCidades.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Views\FrmMarcas.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Views\FrmMarcas.Designer.cs">
+      <DependentUpon>FrmMarcas.cs</DependentUpon>
+    </Compile>
     <Compile Include="FrmMenu.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -122,6 +134,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="Views\FrmCidades.resx">
+      <DependentUpon>FrmCidades.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -136,8 +151,6 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Views\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
